Expose public TI search cache status
